v3.6.5 (XXXX-XX-XX)
-------------------

* Web UI: Removed unnecessary menubar entry in case of database node inspection.

* The `_from` and `_to` attributes of an edge document can now be edited from
  within the UI.

* Disallow using V8 dependent functions in SEARCH statement.

* Fixed issue ES-609: "Transaction already in use" error when running
  transaction.
  Added option `--transaction.streaming-lock-timeout` to control the timeout in
  seconds in case of parallel access to a streaming transaction.

* Removed the edge id's hover styling in case of embedded document editor in 
  the Web UI as this functionality is disabled. This was misleading because
  the elements are not clickable.

* In case a document got requested via the UI of a collection which does not
  exist, the UI now properly displays an error view instead of having a bad
  display state.

* The Web UI is not disabling the query import button after file upload takes
  place.

* In case of a graph deletion failure, the Web UI displays now the correct
  error message.

* Fix undistribute-remove-after-enum-coll which would allow calculations to be
  pushed to a DBServer which are not allowed to run there.

* Returned `AQL_WARNING()` to emit warnings from UDFs.

* The Web UI is now reporting errors properly in case of editing ArangoSearch
  Views with invalid properties.

* Allow restoring collections from v3.3.0 with their all-numeric collection GUID
  values, by creating a new, unambiguous collection GUID for them.
  v3.3.0 had a bug because it created all-numeric GUID values, which can be
  confused with numeric collection ids in lookups. v3.3.1 already changed the
  GUID routine to produce something non-numeric already, but collections created
  with v3.3.0 can still have an ambiguous GUID. This fix adjusts the restore
  routine to drop such GUID values, so it only changes something if v3.3.0
  collections are dumped, dropped on the server and then restored with the
  flawed GUIDs.
