@@ -1,6 +1,8 @@
 v3.6.5 (XXXX-XX-XX)
 -------------------
 
+* Fixed BTS-110: Fulltext index with minLength <= 0 not allowed.
+
 * Web UI: Removed unnecessary menubar entry in case of database node inspection.
 
 * The `_from` and `_to` attributes of an edge document can now be edited from
